<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="com.b4kancs.scoutlaws.views.details.DetailsActivityViewModel.State" />
        <variable
            name="scoutLaw"
            type="com.b4kancs.scoutlaws.data.model.ScoutLaw" />
        <variable
            name="state"
            type="androidx.databinding.ObservableField&lt;State&gt;" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.b4kancs.scoutlaws.views.start.StartActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="@string/start_to_details_background_transition"
            app:background_number="@{scoutLaw.number}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:state_adapter="@{state}">

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text='@{String.valueOf(scoutLaw.number).concat(". cserkésztörvény")}'
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textColor_number="@{scoutLaw.number}"
                    tools:text="2. cserkésztörvény" />

                <TextView
                    android:id="@+id/text_law"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{scoutLaw.text}"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:transitionName="@string/start_details_law_transition"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_number"
                    app:textColor_number="@{scoutLaw.number}"
                    tools:text="A cserkész egyeneslelkű és feltétlenül igazat mond." />

                <TextView
                    android:id="@+id/text_modern"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{scoutLaw.description}"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_law"
                    app:textColor_number="@{scoutLaw.number}"
                    tools:text="@string/law_2_desc" />

                <LinearLayout
                    android:id="@+id/linear_old"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_law">

                    <TextView
                        android:id="@+id/text_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{scoutLaw.originalDescription}"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        app:textColor_number="@{scoutLaw.number}"
                        tools:text="@string/law_2_desc_orig" />

                    <TextView
                        android:id="@+id/text_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/source_orig"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        app:textColor_number="@{scoutLaw.number}"
                        tools:text="@string/original" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>