<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/contemporaryDesc_menuItem"
        android:title="@string/contemporary"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/originalDesc_menuItem"
        android:title="@string/original"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>