<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.b4kancs.scoutlaws.views.quiz.picker.PickerViewModel.State" />
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.b4kancs.scoutlaws.views.quiz.picker.PickerViewModel" />
        <variable
            name="sharedViewModel"
            type="com.b4kancs.scoutlaws.views.quiz.picker.PickerSharedViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/constraint_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:animateLayoutChanges="@{context}">

        <FrameLayout
            android:id="@+id/frame_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:gravity="top"
            android:orientation="vertical"
            app:background_number="@{viewModel.scoutLaw.law.number}">

            <com.nex3z.flowlayout.FlowLayout
                android:id="@+id/flow_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                app:animateLayoutChanges="@{context}"
                app:flChildSpacing="12dp"
                app:flChildSpacingForLastRow="12dp"
                app:flFlow="true"
                app:flRowSpacing="2dp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:animateLayoutChanges="@{context}">

            <Button
                android:id="@+id/button_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/help"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState == State.IN_PROGRESS &amp;&amp; !viewModel.helpUsedUp ? View.VISIBLE : View.GONE}"
                tools:text="Segítség" />

            <Button
                android:id="@+id/button_give_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/give_up"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState == State.IN_PROGRESS &amp;&amp; viewModel.helpUsedUp ? View.VISIBLE : View.GONE}"
                tools:text="Feladom" />

            <Button
                android:id="@+id/button_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/check_button"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState == State.CHECKABLE ? View.VISIBLE : View.GONE}"
                tools:text="Ellenőrzés" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/next_button"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState == State.DONE &amp;&amp; !sharedViewModel.isLastTurn ? View.VISIBLE : View.GONE}"
                tools:text="Következő" />

            <Button
                android:id="@+id/button_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/finish_button"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState == State.DONE &amp;&amp; sharedViewModel.isLastTurn ? View.VISIBLE : View.GONE}"
                tools:text="Befejezés" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/clear_button"
                android:textColor="@color/colorPrimary"
                android:visibility="@{viewModel.observableState != State.DONE ? View.VISIBLE : View.GONE}"
                tools:text="Töröl" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.nex3z.flowlayout.FlowLayout
                android:id="@+id/flow_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                app:animateLayoutChanges="@{context}"
                app:flChildSpacing="8dp"
                app:flChildSpacingForLastRow="8dp"
                app:flRowSpacing="4dp"
                app:optionsFlowAdapter_viewModel="@{viewModel}"
                app:optionsFlowAdapter_options="@{viewModel.options}"/>
        </ScrollView>
    </LinearLayout>
</layout>