<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="law_1_pick">Word word #correct1 word #correct2.</string>
    <string-array name="law_1_pick_options">
        <item>option1</item>
        <item>option2</item>
        <item>option3</item>
        <item>option4</item>
    </string-array>

    <string name="law_2_pick">Word word #correct1 word #correct2.</string>
    <string-array name="law_2_pick_options">
...
