...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top_bar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorPrimaryLight">

            <Chronometer
                android:id="@+id/chronometer"
...
